src/antlr_files/CmmParser.py
# Generated from Cmm.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CmmParser ( Parser ):

    grammarFileName = "Cmm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "<INVALID>", "'if'", "'else'", 
                     "'while'", "'for'", "'break'", "'continue'", "'enum'", 
                     "'const'", "'int'", "'float'", "'char'", "'void'", 
                     "'main'", "'switch'", "'case'", "'default'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "'='", 
                     "':'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", 
                     "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "'!'", 
                     "'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'++'", 
                     "'--'" ]

    symbolicNames = [ "<INVALID>", "INCLUDE", "HEADER", "IF", "ELSE", "WHILE", 
                      "FOR", "BREAK", "CONTINUE", "ENUM", "CONST", "INT", 
                      "FLOAT", "CHAR", "VOID", "MAIN", "SWITCH", "CASE", 
                      "DEFAULT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACKET", "RBRACKET", "COMMA", "SEMI", "ASSIGN", 
                      "COLON", "PLUS", "MINUS", "MUL", "DIV", "MOD", "LESS", 
                      "GREATER", "LESSEQ", "GREATEREQ", "EQ", "NEQ", "AND", 
                      "OR", "NOT", "BITAND", "BITOR", "BITXOR", "BITNOT", 
                      "LSHIFT", "RSHIFT", "INC", "DEC", "CHAR_LITERAL", 
                      "FLOAT_LITERAL", "INT_LITERAL", "STRING_LITERAL", 
                      "IDENTIFIER", "MULTI_LINE_COMMENT", "SINGLE_LINE_COMMENT", 
                      "WS" ]

    RULE_compilationUnit = 0
    RULE_includeDirective = 1
    RULE_functionDefinition = 2
    RULE_parameterList = 3
    RULE_compoundStatement = 4
    RULE_declaration = 5
    RULE_statement = 6
    RULE_typeSpecifier = 7
    RULE_expression = 8
    RULE_ifStatement = 9
    RULE_whileStatement = 10
    RULE_forStatement = 11
    RULE_breakStatement = 12
    RULE_continueStatement = 13
    RULE_switchStatement = 14
    RULE_caseBlock = 15
    RULE_enumDeclaration = 16
    RULE_enumList = 17
    RULE_assignment_expression = 18
    RULE_logical_or_expression = 19
    RULE_logical_and_expression = 20
    RULE_inclusive_or_expression = 21
    RULE_exclusive_or_expression = 22
    RULE_and_expression = 23
    RULE_equality_expression = 24
    RULE_relational_expression = 25
    RULE_shift_expression = 26
    RULE_additive_expression = 27
    RULE_cast_expression = 28
    RULE_multiplicative_expression = 29
    RULE_unary_expression = 30
    RULE_postfix_expression = 31
    RULE_argumentList = 32
    RULE_primary_expression = 33
    RULE_array_initializer = 34

    ruleNames =  [ "compilationUnit", "includeDirective", "functionDefinition", 
                   "parameterList", "compoundStatement", "declaration", 
                   "statement", "typeSpecifier", "expression", "ifStatement", 
                   "whileStatement", "forStatement", "breakStatement", "continueStatement", 
                   "switchStatement", "caseBlock", "enumDeclaration", "enumList", 
                   "assignment_expression", "logical_or_expression", "logical_and_expression", 
                   "inclusive_or_expression", "exclusive_or_expression", 
                   "and_expression", "equality_expression", "relational_expression", 
                   "shift_expression", "additive_expression", "cast_expression", 
                   "multiplicative_expression", "unary_expression", "postfix_expression", 
                   "argumentList", "primary_expression", "array_initializer" ]

    EOF = Token.EOF
    INCLUDE=1
    HEADER=2
    IF=3
    ELSE=4
    WHILE=5
    FOR=6
    BREAK=7
    CONTINUE=8
    ENUM=9
    CONST=10
    INT=11
    FLOAT=12
    CHAR=13
    VOID=14
    MAIN=15
    SWITCH=16
    CASE=17
    DEFAULT=18
    LPAREN=19
    RPAREN=20
    LBRACE=21
    RBRACE=22
    LBRACKET=23
    RBRACKET=24
    COMMA=25
    SEMI=26
    ASSIGN=27
    COLON=28
    PLUS=29
    MINUS=30
    MUL=31
    DIV=32
    MOD=33
    LESS=34
    GREATER=35
    LESSEQ=36
    GREATEREQ=37
    EQ=38
    NEQ=39
    AND=40
    OR=41
    NOT=42
    BITAND=43
    BITOR=44
    BITXOR=45
    BITNOT=46
    LSHIFT=47
    RSHIFT=48
    INC=49
    DEC=50
    CHAR_LITERAL=51
    FLOAT_LITERAL=52
    INT_LITERAL=53
    STRING_LITERAL=54
    IDENTIFIER=55
    MULTI_LINE_COMMENT=56
    SINGLE_LINE_COMMENT=57
    WS=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CmmParser.EOF, 0)

        def includeDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.IncludeDirectiveContext)
            else:
                return self.getTypedRuleContext(CmmParser.IncludeDirectiveContext,i)


        def enumDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.EnumDeclarationContext)
            else:
                return self.getTypedRuleContext(CmmParser.EnumDeclarationContext,i)


        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(CmmParser.FunctionDefinitionContext,i)


        def getRuleIndex(self):
            return CmmParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = CmmParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 70
                self.includeDirective()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 76
                self.enumDeclaration()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 30720) != 0):
                self.state = 82
                self.functionDefinition()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(CmmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(CmmParser.INCLUDE, 0)

        def HEADER(self):
            return self.getToken(CmmParser.HEADER, 0)

        def getRuleIndex(self):
            return CmmParser.RULE_includeDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeDirective" ):
                listener.enterIncludeDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeDirective" ):
                listener.exitIncludeDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludeDirective" ):
                return visitor.visitIncludeDirective(self)
            else:
                return visitor.visitChildren(self)




    def includeDirective(self):

        localctx = CmmParser.IncludeDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_includeDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(CmmParser.INCLUDE)
            self.state = 91
            self.match(CmmParser.HEADER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(CmmParser.TypeSpecifierContext,0)


        def LPAREN(self):
            return self.getToken(CmmParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CmmParser.RPAREN, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(CmmParser.CompoundStatementContext,0)


        def MAIN(self):
            return self.getToken(CmmParser.MAIN, 0)

        def IDENTIFIER(self):
            return self.getToken(CmmParser.IDENTIFIER, 0)

        def parameterList(self):
            return self.getTypedRuleContext(CmmParser.ParameterListContext,0)


        def getRuleIndex(self):
            return CmmParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = CmmParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.typeSpecifier()
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==15 or _la==55):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self.match(CmmParser.LPAREN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30720) != 0):
                self.state = 96
                self.parameterList()


            self.state = 99
            self.match(CmmParser.RPAREN)
            self.state = 100
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.TypeSpecifierContext)
            else:
                return self.getTypedRuleContext(CmmParser.TypeSpecifierContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CmmParser.IDENTIFIER)
            else:
                return self.getToken(CmmParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CmmParser.COMMA)
            else:
                return self.getToken(CmmParser.COMMA, i)

        def getRuleIndex(self):
            return CmmParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = CmmParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.typeSpecifier()
            self.state = 103
            self.match(CmmParser.IDENTIFIER)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 104
                self.match(CmmParser.COMMA)
                self.state = 105
                self.typeSpecifier()
                self.state = 106
                self.match(CmmParser.IDENTIFIER)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CmmParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CmmParser.RBRACE, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CmmParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.StatementContext)
            else:
                return self.getTypedRuleContext(CmmParser.StatementContext,i)


        def getRuleIndex(self):
            return CmmParser.RULE_compoundStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStatement" ):
                listener.enterCompoundStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStatement" ):
                listener.exitCompoundStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStatement" ):
                return visitor.visitCompoundStatement(self)
            else:
                return visitor.visitChildren(self)




    def compoundStatement(self):

        localctx = CmmParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compoundStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(CmmParser.LBRACE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0):
                self.state = 114
                self.declaration()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 71578210796044776) != 0):
                self.state = 120
                self.statement()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(CmmParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(CmmParser.TypeSpecifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(CmmParser.IDENTIFIER, 0)

        def SEMI(self):
            return self.getToken(CmmParser.SEMI, 0)

        def CONST(self, i:int=None):
            if i is None:
                return self.getTokens(CmmParser.CONST)
            else:
                return self.getToken(CmmParser.CONST, i)

        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(CmmParser.MUL)
            else:
                return self.getToken(CmmParser.MUL, i)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(CmmParser.LBRACKET)
            else:
                return self.getToken(CmmParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(CmmParser.RBRACKET)
            else:
                return self.getToken(CmmParser.RBRACKET, i)

        def ASSIGN(self):
            return self.getToken(CmmParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CmmParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CmmParser.ExpressionContext,i)


        def array_initializer(self):
            return self.getTypedRuleContext(CmmParser.Array_initializerContext,0)


        def getRuleIndex(self):
            return CmmParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = CmmParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 128
                self.match(CmmParser.CONST)


            self.state = 131
            self.typeSpecifier()
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 132
                self.match(CmmParser.CONST)


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 135
                self.match(CmmParser.MUL)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 141
                self.match(CmmParser.CONST)


            self.state = 144
            self.match(CmmParser.IDENTIFIER)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 145
                self.match(CmmParser.LBRACKET)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 71578210726838272) != 0):
                    self.state = 146
                    self.expression()


                self.state = 149
                self.match(CmmParser.RBRACKET)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 155
                self.match(CmmParser.ASSIGN)
                self.state = 158
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19, 29, 30, 31, 42, 43, 46, 49, 50, 51, 52, 53, 54, 55]:
                    self.state = 156
                    self.expression()
                    pass
                elif token in [21]:
                    self.state = 157
                    self.array_initializer()
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 162
            self.match(CmmParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CmmParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(CmmParser.SEMI, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(CmmParser.CompoundStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(CmmParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(CmmParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(CmmParser.ForStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(CmmParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(CmmParser.ContinueStatementContext,0)


        def getRuleIndex(self):
            return CmmParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CmmParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 29, 30, 31, 42, 43, 46, 49, 50, 51, 52, 53, 54, 55]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.expression()
                self.state = 165
                self.match(CmmParser.SEMI)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.compoundStatement()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.ifStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 169
                self.whileStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 170
                self.forStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 171
                self.breakStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 172
                self.continueStatement()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 8)
                self.state = 173
                self.match(CmmParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CmmParser.INT, 0)

        def FLOAT(self):
            return self.getToken(CmmParser.FLOAT, 0)

        def CHAR(self):
            return self.getToken(CmmParser.CHAR, 0)

        def VOID(self):
            return self.getToken(CmmParser.VOID, 0)

        def getRuleIndex(self):
            return CmmParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = CmmParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30720) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

